--- a/index.html
+++ b/index.html
@@ -8,17 +8,51 @@
     <meta name="author" content="">
     <title>Sync.io</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container">
+      <div class="header clearfix">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       
-    </nav>
+        </nav>
+        <h2 class="text-muted">Sync.io contacts</h2>
+      </div>
+     
+      <div class="jumbotron">
+        <h2>Save Your Favourite Contacts</h2>
+        <form id="myForm">
+          <div class="form-group">
+            <label>Site Name</label>
+            <input type="text" class="form-control" id="siteName" placeholder="website">
+          </div>
+          <div class="form-group">
+            <label>Site URL</label>
+            <input type="text" class="form-control" id="siteName" placeholder="website">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="row marketing">
+        <div class="col-lg-12">
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
 
-    <main role="main">
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
+        </div>
+      </div>
+
+
+
+    </div>
+
+
+    <!-- <main role="main">
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-3">Sync.io</h1>
@@ -26,7 +60,6 @@
       </div>
 
       <div class="container">
-        <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
             <h2>Heading</h2>
@@ -47,16 +80,17 @@
 
         <hr>
 
-      </div> <!-- /container -->
+      </div> 
 
-    </main>
+    </main> -->
 
     <footer class="container">
       <p>&copy; Sync.io 2022</p>
     </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
