--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       
         </nav>
-        <h2 class="text-muted">Sync.io contacts</h2>
+        <h2 class="text-muted">Sync.io </h2>
       </div>
      
       <div class="jumbotron">
-        <h2>Save Your Favourite Contacts</h2>
+        <h2>Sync.Pages</h2>
+        <h4>Cloud Pages</h4>
+        <br>
         <form id="myForm">
           <div class="form-group">
             <label>Site Name</label>
@@ -29,21 +31,24 @@
           </div>
           <div class="form-group">
             <label>Site URL</label>
-            <input type="text" class="form-control" id="siteName" placeholder="website">
+            <input type="text" class="form-control" id="siteUrl" placeholder="website">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
       <div class="row marketing">
         <div class="col-lg-12">
-          <h4>Subheading</h4>
+          <div id="syncpagesresults">
+
+          </div>
+          <!-- <h4>Subheading</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
 
           <h4>Subheading</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
 
           <h4>Subheading</h4>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia debitis voluptas quibusdam amet nesciunt eaque tenetur sed doloremque voluptate optio?</p> -->
         </div>
       </div>
 
