--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
       <br>
      
       <div class="jumbotron  viewarea">
-        <h6 class="display-4">pages.cloud</h6>
-        <br>
-        <form id="myForm">
-          <div class="form-group">
-            <label class="d">Site Name</label>
-            <input type="text" class="form-control" id="siteName" placeholder="website">
-          </div>
-          <div class="form-group">
-            <label>Site URL</label>
-            <input type="text" class="form-control" id="siteUrl" placeholder="website">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        <div class="container">
+          <h6 class="display-4">pages.cloud</h6>
+          <br>
+          <form id="myForm">
+            <div class="form-group">
+              <label class="d">Site Name</label>
+              <input type="text" class="form-control" id="siteName" placeholder="website">
+            </div>
+            <div class="form-group">
+              <label>Site URL</label>
+              <input type="text" class="form-control" id="siteUrl" placeholder="website">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
       <div class="row marketing">
         <div class="col-lg-12">
